force-app/main/default/objects/Test_Drive__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>