force-app/main/default/objects/Test_Drive__c/fields/Ride_Type__c.field-meta.xml
<CustomField>
    <fullName>Ride_Type__c</fullName>
    <label>Ride Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STR</fullName>
            </value>
            <value>
                <fullName>HTR</fullName>
            </value>
            <value>
                <fullName>Home Ride</fullName>
                <isActive>false</isActive>
                <label>Home Ride</label>
            </value>
            <value>
                <fullName>Store Ride</fullName>
                <isActive>false</isActive>
                <label>Store Ride</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>